# probabilistic_point_clouds_registration

./: .gitignore  CMakeLists.txt  README.md  package.xml  point-cloud-registration.files  point-cloud-registration.includes  point_cloud_registration.files  test_all.py  tester.py
include/: particle.hpp
include/map_merging/: dense_sparse_simulator.h
include/point_cloud_registration/: EigenMatrixSerialize.h  dense_sparse_simulator.h  error_term.hpp  output_stream.hpp  particle.hpp  particle_parameters.hpp  pointCloudRegistration.h  point_cloud_registration.h  point_cloud_registration_iteration.h  point_cloud_registration_iteration.hpp  point_cloud_registration_params.hpp  probabilisticWeights.h  probabilistic_weights.h  probabilistic_weights.hpp  pso_registration.hpp  reprojectionError.h  reprojection_error.h  swarm.hpp  swarm_parameters.hpp  utilities.hpp  weightUpdater.h  weight_updater.h  weight_updater_callback.hpp  weighted_error_term.h
include/prob_point_cloud_registration/: error_term.hpp  output_stream.hpp  prob_point_cloud_registration.h  prob_point_cloud_registration_iteration.hpp  prob_point_cloud_registration_params.hpp  probabilistic_weights.hpp  utilities.hpp  weight_updater_callback.hpp
probabilistic_registration_experiments/l1/r_max/m1/: apartment_local_result.txt  box_met_local_result.txt  gazebo_summer_local_result.txt  gazebo_winter_local_result.txt  hauptgebaude_local_result.txt  long_office_household_local_result.txt  p2at_met_local_result.txt  pioneer_slam3_local_result.txt  pioneer_slam_local_result.txt  plain_local_result.txt  planetary_map_local_result.txt  stairs_local_result.txt  urban05_local_result.txt  wood_autumn_local_result.txt  wood_summer_local_result.txt
probabilistic_registration_experiments/l1/r_max/m10/: apartment_local_result.txt  box_met_local_result.txt  gazebo_summer_local_result.txt  gazebo_winter_local_result.txt  hauptgebaude_local_result.txt  long_office_household_local_result.txt  p2at_met_local_result.txt  pioneer_slam3_local_result.txt  pioneer_slam_local_result.txt  plain_local_result.txt  planetary_map_local_result.txt  stairs_local_result.txt  urban05_local_result.txt  wood_autumn_local_result.txt  wood_summer_local_result.txt
probabilistic_registration_experiments/l1/r_max/m15/: apartment_local_result.txt  box_met_local_result.txt  gazebo_summer_local_result.txt  gazebo_winter_local_result.txt  hauptgebaude_local_result.txt  long_office_household_local_result.txt  p2at_met_local_result.txt  pioneer_slam3_local_result.txt  pioneer_slam_local_result.txt  plain_local_result.txt  planetary_map_local_result.txt  stairs_local_result.txt  urban05_local_result.txt  wood_autumn_local_result.txt  wood_summer_local_result.txt
probabilistic_registration_experiments/l1/r_max/m20/: apartment_local_result.txt  box_met_local_result.txt  gazebo_summer_local_result.txt  gazebo_winter_local_result.txt  hauptgebaude_local_result.txt  long_office_household_local_result.txt  p2at_met_local_result.txt  pioneer_slam3_local_result.txt  pioneer_slam_local_result.txt  plain_local_result.txt  planetary_map_local_result.txt  stairs_local_result.txt  (+3 more)
scripts/: plot_errors.m
src/: aslam_map_merging.cc  aslam_map_merging_simulator.cc  dense_sparse_simulator.cc  icp_registration.cc  metric_tester.cc  ndt_registration.cc  obj_fun_analyzer.cpp  pointCloudRegistration.cc  point_cloud_registration.cc  point_cloud_registration_ex.cc  point_cloud_registration_iteration.cc  point_cloud_registration_ros.cc  point_cloud_registration_simulator.cc  prob_point_cloud_registration.cc  prob_point_cloud_registration_ex.cc  probabilisticWeights.cc  probabilistic_weights.cc  pso.cc  pso_initial_guess.cc  pso_parameters.cc  pso_registration.py  registration_visualizer.cc  reprojectionError.cc  reprojection_error.cc  simple_viewer.cc  tester.cc  weightUpdater.cc  weight_updater.cc  weighted_error_term.cc
termination_exp/100_iter/: apartment_local_result.txt  box_met_local_result.txt  gazebo_summer_local_result.txt  gazebo_winter_local_result.txt  hauptgebaude_local_result.txt  long_office_household_local_result.txt  p2at_met_local_result.txt  pioneer_slam3_local_result.txt  pioneer_slam_local_result.txt  plain_local_result.txt  planetary_map_local_result.txt  stairs_local_result.txt  urban05_local_result.txt  wood_autumn_local_result.txt  wood_summer_local_result.txt
termination_exp/cost_drop/: apartment_local_result.txt  box_met_local_result.txt  gazebo_summer_local_result.txt  gazebo_winter_local_result.txt  hauptgebaude_local_result.txt  long_office_household_local_result.txt  p2at_met_local_result.txt  pioneer_slam3_local_result.txt  pioneer_slam_local_result.txt  plain_local_result.txt  planetary_map_local_result.txt  stairs_local_result.txt  urban05_local_result.txt  wood_autumn_local_result.txt  wood_summer_local_result.txt
termination_exp/cost_drop_10/: apartment_local_result.txt  box_met_local_result.txt  gazebo_summer_local_result.txt  gazebo_winter_local_result.txt  hauptgebaude_local_result.txt  long_office_household_local_result.txt  p2at_met_local_result.txt  pioneer_slam3_local_result.txt  pioneer_slam_local_result.txt  plain_local_result.txt  planetary_map_local_result.txt  stairs_local_result.txt  urban05_local_result.txt  wood_autumn_local_result.txt  wood_summer_local_result.txt
termination_exp/cost_drop_20/: apartment_local_result.txt  box_met_local_result.txt  gazebo_summer_local_result.txt  gazebo_winter_local_result.txt  hauptgebaude_local_result.txt  long_office_household_local_result.txt  p2at_met_local_result.txt  pioneer_slam3_local_result.txt  pioneer_slam_local_result.txt  plain_local_result.txt  planetary_map_local_result.txt  stairs_local_result.txt  urban05_local_result.txt  wood_autumn_local_result.txt  wood_summer_local_result.txt
test/: PointCloudRegistrationTest.cc  ProbabilisticWeightsTest.cc
utilities/: 3dreconstruction.py  align_all.py  csv2pcd.py  loadMetricTests.m  parameters_test.py  parameters_test.pyù  plot_analyzer_data.py  plot_data.m  plot_parameters.m  robustness_plots.m  view2gtruth.py
(+360 files in other folders)
