<?xml version="1.0"?>
<package>
  <name>point_cloud_registration</name>
  <version>1.0.0</version>
  <description>A point cloud registration software</description>

  <maintainer email="fontana.simone@outlook.com">Simone Fontana</maintainer>
  <license>GPL 3.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>eigen_catkin</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>ceres_catkin</build_depend>
  <build_depend>VTK</build_depend>

</package>
